# R-TypeEpitech

./: CMakeLists.txt  README.md  install_linux.sh
Documentation/: protocol.txt
src/: DataToVector.cpp  DataToVector.hpp  Lobby.cpp  Lobby.hpp  Player.cpp  Player.hpp  VectorToData.cpp  VectorToData.hpp
src/client/: Client.cpp  Client.hpp  Connection.cpp  Connection.hpp  DisplayLobby.cpp  DisplayLobby.hpp  Global.hpp  Lobbies.cpp  Lobbies.hpp  main.cpp
src/client/Interfaces/: IRectangle.hpp  IText.hpp  IWindow.hpp
src/client/SFML/Rectangle/: SFMLRectangle.cpp  SFMLRectangle.hpp
src/client/SFML/Text/: SFMLText.cpp  SFMLText.hpp
src/client/SFML/Window/: SFMLWindow.cpp  SFMLWindow.hpp
src/server/: Game.cpp  Game.hpp  Server.cpp  Server.hpp  main.cpp
